@@ -53,7 +53,19 @@ to pass the
 <userinput>console=<replaceable>device</replaceable></userinput>
 argument to the kernel, where <replaceable>device</replaceable> is
 your serial device, which is usually something like
-<filename>ttyS0</filename>.
+<filename>ttyS0</filename><footnote>
+
+<para>
+In order to ensure the terminal type used by the installer matches your
+terminal emulator, the parameter
+<userinput>TERM=<replaceable>type</replaceable></userinput> can be added.
+Note that the installer only supports the following terminal types:
+<literal>linux</literal>, <literal>bterm</literal>, <literal>ansi</literal>,
+<literal>vt102</literal> and <literal>dumb</literal>. The default for
+serial console in &d-i; is <userinput>vt102</userinput>.
+</para>
+
+</footnote>.
 
 </para><para arch="sparc">
 
